# test-github-actions

./: CHANGELOG.md  Makefile  README.md  pyproject.toml  test_main.py
.github/actions/setup-env/: action.yaml
.github/workflows/: action.yaml  release.yaml  run-tests.yaml  tag-and-release.yaml  update-version-and-create-release-pr.yaml
src/sample/: main.py
tests/: test_sample.py
