[tool.poetry]
name = "test-github-actions"
version = "0.1.0"
description = "testing github actions"
authors = ["Hrvoje Ruhek <hrvoje.ruhek@wearenotch.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.test.dependencies]
pytest = "^8.2.1"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
