[tool.poetry]
name = "test-github-actions"
version = "1.0.5a0"
description = "testing github actions"
authors = ["Hrvoje Ruhek <hrvoje.ruhek@wearenotch.com>"]
readme = "README.md"
packages = [
    { include = "sample", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"


[tool.poetry.group.test.dependencies]
pytest = "^8.2.1"
requests-mock = "^1.12.1"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"
black = "^24.4.2"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
